fix: use modern methods/styles